# airy

./: .babelrc  .coveragerc  .csslintrc  .editorconfig  .eslintrc.json  .gitignore  .htmlhintrc  .jscsrc  .jshintrc  .sass-lint.yml  .stylelintrc.json  .travis.yml  Gruntfile.js  LICENSE  Pipfile  Procfile  README.md  Vagrantfile  alembic.ini  bandit.yaml  bower.json  env.example  fabfile.py  fontello.json  karma.conf.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  rollup.config.js  tsconfig.json
airy/: __init__.py  __main__.py  config.py  core.py  database.py  exceptions.py  forms.py  models.py  report.py  serializers.py  settings.py  settings.py.dist  settings.py.example  static.py  user.py  views.py  webapp.py
airy/assets/: index.json  libs.json
airy/frontend/: index.json  system-test.conf.js
airy/resources/: __init__.py  client.py  project.py  task.py  time_entry.py  user.py
airy/templates/: base.html  client.html  clients.html  dashboard.html  index.html  login.html  project.html  projects.html  report.html  reports.html  task.html  tasks.html  time_entry.html
airy/tests/: conftest.py  factories.py  test_api.py  test_app.py  test_reports.py  test_serializers.py  test_user.py  test_utils.py  (+1 more)
alembic/: env.py
fabfile/: __init__.py  build.py  check.py  db.py  helpers.py  test.py  utils.py
frontend/: index-template.html  index.html  index.json  system-test.conf.js
jasmine/: test_spec.js
tasks/: __init__.py  build.py  check.py  db.py  utils.py
vagrant/: default_settings.yml  settings.yml
(+351 files in other folders)
