[tool.poetry]
name = "airy"
version = "1.0.0"
description = "time tracker"
authors = []

[tool.poetry.dependencies]
python = "~3.8"

alembic = "~=1.0.5"
arrow = "==0.15.2"
Flask = "==1.0.4"
Flask-RESTful = "==0.3.7"
Flask-SQLAlchemy = "2.4.4"
psycopg2 = "==2.8.4"
"Jinja2" = "==2.10"
marshmallow = "~=3.2.1"
pytz = ">=2014.2"
premailer = "==2.8.3"
SQLAlchemy = "~=1.2.14"
sqlalchemy-utils = "~=0.33.9"
environs = "~=4.0.0"

[tool.poetry.dev-dependencies]
bandit = "~=1.6.2"
fabric = "==2.3.1"
factory_boy = "==2.8.1"
Faker = "==0.7.7"
flake8 = "~=3.7.8"
honcho = "==1.0.1"
invoke = "==1.1.1"
mypy = "==0.740"
pytest = "==4.*"
pytest-flask = "*"
pytest-mock = "*"
pytest-cov = "*"
safety = "1.9.0"
